# agent-test

./: Dockerfile  Dockerfile.app  Dockerfile.base  README.md  pyproject.toml
.circleci/: config.yaml  config.yml
.github/workflows/: build-app.yaml  build-base.yaml  build.yaml  manifest-base.yaml  test.yaml
app/: main.py
app/api/: ask.py  default.py
app/core/: config.py
app/schemas/: default.py
kubernetes/: deployment.yaml  ingress.yaml  service-ingress.yaml  service.yaml
