[project]
name = "agent-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Edenak",email = "leonardoedenak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "llama-index (>=0.12.22,<0.13.0)",
    "llama-index-llms-gemini (>=0.4.11,<0.5.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

